--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -13,7 +13,10 @@ body {
 box-shadow: 0 0 5px rgba(0,0,0,.05);
 }
 
-
+.row {
+    margin-right: 0px!important;
+    margin-left: 0px!important;
+}
 @media screen and (min-width: 768px) {
   html {
     text-rendering: optimizeLegibility;
